--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,21 +12,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.8
   firebase_core: ^4.4.0
   firebase_crashlytics: ^5.0.7
   firebase_analytics: ^12.1.2
   flutter_svg: ^2.2.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
+  
 flutter:
-
   uses-material-design: true
+  generate: true
 
   assets:
     - assets/images/
