[WIP]: Home screen ui design in progress

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   provider: ^6.1.5+1
   shared_preferences: ^2.5.4
   pin_code_fields: ^9.1.0
+  carousel_slider: ^5.1.2
 
 dev_dependencies:
   flutter_test:
